# monocore

./: .gitignore  .md  .pre-commit-config.yaml  .release-please-manifest.json  .todo.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  _README.md  build_libkrun.sh  deny.toml  install_monocore.sh  monocore.example.json  monocore.example.toml  package_monocore.sh  release-please-config.json  roadmap.md  setup_env.sh
cryptdag/: Cargo.toml  README.md
cryptdag/lib/: lib.rs
did-wk/: Cargo.toml
did-wk/lib/: lib.rs
ipldstore/: CHANGELOG.md  Cargo.toml  README.md
ipldstore/lib/: chunker.rs  constants.rs  error.rs  layout.rs  lib.rs  references.rs  store.rs  utils.rs
ipldstore/lib/implementations/chunkers/: fastcdc.rs  fixed.rs  gearcdc.rs  mod.rs
ipldstore/lib/implementations/layouts/: mod.rs
ipldstore/lib/implementations/stores/: dualstore.rs  memstore.rs  mod.rs
monocore/: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
monocore/benches/: microvm_provision.rs
monocore/examples/: microvm_counter.rs  microvm_curl.rs  microvm_nc.rs  microvm_nop.rs  microvm_shell.rs  microvm_tcp.rs  microvm_udp.rs  microvm_vol.rs  oci_merge.rs  oci_pull.rs  orchestration.rs  orchestration_basic.rs  orchestration_load.rs  orchestration_network.rs
monocore/lib/: error.rs  lib.rs  models.rs
monocore/lib/cli/: args.rs  mod.rs  styles.rs
monocore/lib/cli/args/: mcrun.rs  mod.rs  monocore.rs
monocore/lib/config/: defaults.rs  env_pair.rs  merge.rs  mod.rs  monocore.rs  monocore_builder.rs  path_pair.rs  path_segment.rs  port_pair.rs  reference_path.rs  service_builder.rs  utils.rs  validate.rs
monocore/lib/config/monocore/: builder.rs  config.rs  mod.rs
monocore/lib/group/: config.rs  mod.rs  server.rs
monocore/lib/log/: mod.rs  rotating.rs
monocore/lib/management/: config.rs  db.rs  env.rs  find.rs  image.rs  init.rs  menv.rs  mod.rs  orchestra.rs  rootfs.rs  sandbox.rs  server.rs  supervise.rs
monocore/lib/management/migrations/: 20250128014823_create_sandboxes.up.sql  20250128014831_create_groups.up.sql  20250128014851_create_sandbox_metrics.up.sql
monocore/lib/management/models/: mod.rs  sandbox.rs
monocore/lib/migrations/oci/: 20250128014903_create_configs.up.sql
monocore/lib/migrations/sandbox/: 20250128014823_create_sandboxes.up.sql  20250128014831_create_groups.down.sql
monocore/lib/monoimage/: constants.rs  mod.rs  registry.rs
monocore/lib/oci/: mod.rs  pull.rs  reference.rs  selector.rs
monocore/lib/oci/distribution/: docker.rs  mod.rs  traits.rs
monocore/lib/orchestration/: down.rs  log.rs  log_policy.rs  mod.rs  orchestrator.rs  remove.rs  status.rs  up.rs  utils.rs
monocore/lib/proxy/: mod.rs  server.rs
monocore/lib/runtime/: ffi.rs  log.rs  mod.rs  monitor.rs  orchestrator.rs  rootfs.rs  state.rs  supervisor.rs  vm.rs
monocore/lib/server/: api.rs  data.rs  handlers.rs  mod.rs  routes.rs  state.rs  types.rs
monocore/lib/utils/: conversion.rs  env.rs  file.rs  mod.rs  oci.rs  path.rs
monocore/lib/vm/: builder.rs  ffi.rs  mod.rs  rlimit.rs  vm.rs
monocore/tests/: Makefile  test_oci_distribution.rs  test_oci_overlayfs.rs  test_oci_rootfs.rs
monocore/tests/cli/: init.rs  mod.rs
monofs/: CHANGELOG.md  Cargo.toml  EXPLAINER.md  README.md
monofs/examples/: dir.rs  dir_ops.rs  file.rs  file_ops.rs  flatfs_monofs.rs  flatfs_store.rs  nfs.rs  nfs_server.rs  test.rs
monofs/lib/: error.rs  lib.rs
monofs/lib/cli/: args.rs
monofs/lib/config/: default.rs  mod.rs
monofs/lib/filesystem/: cidlink.rs  dir.rs  entity.rs  eq.rs  error.rs  file.rs  kind.rs  link.rs  metadata.rs  mod.rs  pathdirs.rs  resolvable.rs  softlink.rs  storechange.rs  storeswitch.rs  symcidlink.rs  symlink.rs  sympathlink.rs  traits.rs
monofs/lib/management/: db.rs  find.rs  fs.rs  init.rs  mfs.rs  mod.rs  mount.rs
monofs/lib/runtime/: metrics.rs  mod.rs  monitor.rs
monofs/lib/server/: mod.rs  nfs.rs  server.rs
monofs/lib/store/: flatfsstore.rs  layeredfsstore.rs  layeredstore.rs  membufferstore.rs  mod.rs
monofs/lib/stores/: membufferstore.rs
monofs/lib/utils/: dir.rs  env.rs  mod.rs  path.rs
monofs/tests/cli/: init.rs  mod.rs
monopacks/: Cargo.toml  README.md
monopacks/lib/: lib.rs
monoutils/: Cargo.toml  README.md
monoutils-agent/: Cargo.toml  README.md
monoutils-agent/lib/: lib.rs
monoutils-did/: Cargo.toml  README.md  SPEC.md
monoutils-did/lib/: lib.rs
monoutils-nfs/: Cargo.toml  README.md
monoutils-nfs/lib/: error.rs  lib.rs  nfs.rs  rpc.rs  server.rs  state.rs  xdr.rs
monoutils-raft/: Cargo.toml  README.md
monoutils-raft/lib/: error.rs  lib.rs  messages.rs  node.rs  storage.rs  transport.rs
monoutils-store/: CHANGELOG.md  Cargo.toml
monoutils-store/lib/: error.rs  layout.rs  lib.rs  merkle.rs  references.rs  storable.rs  store.rs  utils.rs
monoutils-ucan/: Cargo.toml  README.md
monoutils-ucan/lib/: lib.rs
monoutils/lib/: error.rs  lib.rs  path.rs  seekable.rs  term.rs
monoutils/lib/config/: default.rs  mod.rs
monoutils/lib/log/: mod.rs  rotating.rs
monoutils/lib/runtime/: metrics.rs  mod.rs  monitor.rs  supervisor.rs
sdk-python/: README.md  pyproject.toml
sdk-python/monocore/: __init__.py  orchestrator.py
sdk-python/monocore/sandbox/: __init__.py  base.py  code.py  command.py  filesystem.py  generic.py  jupyter.py  python.py  stdio.py
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/cmake/: microsandboxConfig.cmake.in
sdk/cpp/src/: microsandbox.cpp
sdk/cpp/test/: test_microsandbox.cpp
sdk/haskell/: README.md  microsandbox.cabal
sdk/haskell/src/: Microsandbox.hs
sdk/haskell/test/: Spec.hs
sdk/ocaml/: README.md  dune-project
sdk/ocaml/lib/: dune  microsandbox.ml  microsandbox.mli
sdk/ocaml/test/: dune  test_microsandbox.ml
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs
virtualfs/: Cargo.toml
virtualfs/examples/: overlaynfs.rs
virtualfs/lib/: defaults.rs  error.rs  filesystem.rs  lib.rs  metadata.rs  segment.rs
virtualfs/lib/implementations/: memoryfs.rs  mod.rs  nativefs.rs  overlayfs.rs
virtualfs/lib/server/: mod.rs  nfs.rs  server.rs
(+203 files in other folders)
