[workspace]
members = [
    "monobase",
    "monocore",
    "monofs",
    "monopacks",
    "monoutils",
    "monoutils-did",
    "monoutils-store",
    "monoutils-ucan",
    "monoutils-cryptdag",
]
resolver = "2"

[workspace.package]
authors = ["Stephen Akinyemi <appcypher@outlook.com>"]
repository = "https://github.com/appcypher/monocore"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
async-stream = "0.3"
async-trait = "0.1"
dirs = "6.0"
hex = "0.4"
libc = "0.2"
nix = "0.29"
axum = "0.8"
bytes = "1.9"
ipld-core = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structstruck = "0.4"
xattr = "1.3"
sha2 = "0.10"
thiserror = "2.0"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["color", "derive"] }
getset = "0.1"
procspawn = "1.0"
rand = "0.9"
reqwest = { version = "0.12", features = ["stream", "json"] }
reqwest-middleware = "0.3"                                        # Cannot upgrade to 0.4 due to https://github.com/TrueLayer/reqwest-middleware/issues/204
reqwest-retry = "0.6"                                             # Cannot upgrade to 0.7 due to https://github.com/TrueLayer/reqwest-middleware/issues/204
monoutils-store = { version = "0.2", path = "./monoutils-store" }
monoutils = { version = "0.2", path = "./monoutils" }
monofs = { version = "0.2", path = "./monofs" }
multihash = "0.19"
multihash-codetable = "0.1"
chrono = { version = "0.4", features = ["serde"] }
criterion = "0.5"
tempfile = "3.15"
test-log = "0.2"
typed-path = "0.10"
toml = "0.8"
typed-builder = "0.20"
uuid = { version = "1.11", features = ["v4"] }
pretty-error-debug = "0.3"
serde_ipld_dagcbor = "0.6"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
regex = "1.10"
async-recursion = "1.1"
