[package]
name = "did-wk"
version = "0.1.0"
description = "`did-wk` is a library for working with DID-Web-Key and DID-Key decentralized identifiers (DIDs) methods."
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "monoutils_did"
path = "lib/lib.rs"

[dependencies]
