[package]
name = "ipldstore"
version = "0.2.1"
description = "`ipldstore` is a library for working with IPLD content-addressed stores (CAS)."
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
readme = "README.md"

[lib]
name = "ipldstore"
path = "lib/lib.rs"

[dependencies]
aliasable = "0.1.3"
anyhow.workspace = true
async-trait.workspace = true
async-stream.workspace = true
bytes.workspace = true
futures.workspace = true
hex.workspace = true
pretty-error-debug.workspace = true
ipld-core.workspace = true
multihash.workspace = true
multihash-codetable = { workspace = true, features = ["blake3"] }
serde = { workspace = true, features = ["derive"] }
serde_ipld_dagcbor.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["io"] }
monoutils.workspace = true
tracing.workspace = true
typed-builder.workspace = true
getset.workspace = true

[dev-dependencies]
rand.workspace = true
