[package]
name = "monocore"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "monocore"
path = "lib/lib.rs"

[[bin]]
name = "monocore"
path = "bin/monocore.rs"

[[bench]]
name = "microvm_provision"
harness = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
criterion.workspace = true
dirs.workspace = true
dotenvy.workspace = true
futures.workspace = true
getset.workspace = true
hex.workspace = true
lazy_static.workspace = true
libc.workspace = true
oci-spec = { git = "https://github.com/containers/oci-spec-rs.git", branch = "main" }
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
structstruck.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
typed-builder.workspace = true
typed-path.workspace = true
xattr.workspace = true

[dev-dependencies]
test-log.workspace = true
criterion.workspace = true
