[package]
name = "monocore"
version = "0.3.0"
description = "`monocore` is a secure MicroVM provisioning system for running untrusted code in isolated environments."
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "monocore"
path = "lib/lib.rs"

[[bin]]
name = "monocore"
path = "bin/monocore.rs"

[[bin]]
name = "monokrun"
path = "bin/monokrun.rs"

[[bench]]
name = "microvm_provision"
harness = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
criterion.workspace = true
dirs.workspace = true
dotenvy.workspace = true
futures.workspace = true
getset.workspace = true
hex.workspace = true
lazy_static.workspace = true
libc.workspace = true
oci-spec = { version = "0.7.1" }
procspawn.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
signal-hook = "0.3.17"
structstruck.workspace = true
tempfile = "3.14.0"
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
typed-builder.workspace = true
typed-path.workspace = true
uuid.workspace = true
xattr.workspace = true
sysinfo = "0.33"
nix = { version = "0.29", features = ["mount", "user", "fs"] }
tar = "0.4"
flate2 = "1.0"
walkdir = "2.4"
scopeguard = "1.2"
tokio-stream = { version = "0.1.17", features = ["fs"] }
pretty-error-debug.workspace = true
serde_yaml = "0.9.34"
async-stream.workspace = true
pin-project = "1.1.7"
tracing-appender = "0.2.3"
pin-project-lite = "0.2.15"

[dev-dependencies]
test-log.workspace = true
criterion.workspace = true
rand.workspace = true

[features]
default = []
overlayfs = []
