[package]
name = "monoutils-raft"
version = "0.1.0"
description = "`monoutils-raft` is a library for extending applications with the Raft distributed consensus protocol."
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "monoutils_raft"
path = "lib/lib.rs"

[dependencies]
