[package]
name = "monoutils-raft"
version = "0.1.0"
description = "`monoutils-raft` is a library for extending applications with the Raft distributed consensus protocol."
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "monoutils_raft"
path = "lib/lib.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rand = "0.8"
