[package]
name = "monoutils-store"
version = "0.2.1"
description = "`monoutils-store` is a library for working with IPLD content-addressed stores (CAS)."
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
readme = "README.md"

[lib]
name = "monoutils_store"
path = "lib/lib.rs"

[dependencies]
aliasable = "0.1.3"
anyhow.workspace = true
async-stream.workspace = true
bytes.workspace = true
futures.workspace = true
hex = "0.4.3"
libipld = { workspace = true, features = ["serde-codec"] }
lru = "0.12.3"
serde = { workspace = true, features = ["derive"] }
serde_ipld_dagcbor.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["io"] }
monoutils.workspace = true

[dev-dependencies]
rand.workspace = true
